feat(mcq): rebuild Q42 + final stray в multi-line формате в java-17-21-interview.md
Q42 (Unnamed Classes + Instance Main Methods) — correct=B, разбор Project Amber motivation (уменьшение entry barrier для новичков), 4 концепции которые убираются (public/class/static/args), priority resolution методов main, ограничения (только top-level, no extends/implements, preview статус), сравнение с JEP 330 single-file launch.

Final stray block в See also удалён, восстановлен исходный список ссылок. Frontmatter updated to 2026-05-14.

java-17-21-interview.md полностью переписан в multi-line формате (4 блока).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>